# kafka-rust

./: Cargo.toml
examples/: console-consumer.rs  console-producer.rs  example-consume.rs  example-fetch.rs  example-produce.rs  example-ssl.rs  offset-monitor.rs  topic-metadata.rs
src/: error.rs
src/client/: network.rs
src/compression/: gzip.rs
src/consumer/: mod.rs
