[package]
name = "kafka"
version = "0.7.0"
authors = ["Yousuf Fauzan", "Petr Novotnik <pnovotnik@googlemail.com>"]
description = "Rust client for Apache Kafka"
homepage = "https://github.com/spicavigo/kafka-rust"
repository = "https://github.com/spicavigo/kafka-rust"
documentation = "https://docs.rs/kafka/"
readme = "README.md"
keywords = ["kafka", "queue"]
license = "MIT"


[dependencies]
byteorder = "1.3.2"
crc = "1.8.1"
log = "0.4.6"
ref_slice = "1.1.1"
fnv = "1.0.6"
twox-hash = "1.4.0"
error-chain = "0.12.1"

flate2 = { version = "1.0.9", optional = true }
snap = { version = "0.2.5", optional = true }
openssl = { version = "0.10.23", optional = true }

[dev-dependencies]
getopts = "0.2.19"
env_logger = "0.6.1"
time = "0.1.42"
rand = "0.7.0"


[features]
default = ["snappy", "gzip", "security"]
snappy = ["snap"]
gzip = ["flate2"]
security = ["openssl"]
nightly = []
integration_tests = []
